<resources>

    <string name="app_filename">SMining.apk</string>
    <string name="app_name">SMining</string>
    <string name="menu_serversettings">服务器设置</string>
    <string name="menu_alarmlist">报警管理</string>
    <string name="launcher_name">SMining</string>
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住登录信息</string>
    <string name="login">登 录</string>
    <string name="strServerIPInputLabel">地址</string>
    <string name="strInputServerHint">服务器IP</string>
    <string name="SaveIP">保存</string>
    <string name="strPortInputLabel">端口</string>
    <string name="select_more">多选下拉按钮</string>
    <string name="btn_return">取消</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_main">主界面</string>
    <string name="str_querycondition">查询条件</string>
    <string name="str_btn_updateapp">检查应用程序更新</string>
    <string name="str_checkupdate">检查更新</string>
    <string name="str_help">帮助</string>
    <string name="default_city">Taiyuan</string>
    <string name="serverip">192.168.0.101</string>
    <string name="serverport">6616</string>
    <string name="title_activity_mine">MineActivity</string>
    <string name="title_activity_mine_list">MineListActivity</string>
    <string name="title_activity_leader">LeaderActivity</string>
    <string name="title_activity_time">TimeActivity</string>
    <string name="title_activity_notice">NoticeActivity</string>

</resources>