<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical" android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="0dip"
		android:layout_weight="1.0"
		android:background="@drawable/default_bg">
		
	    <ImageView android:id="@+id/faceImg"
			    android:background="@drawable/login_head"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		
		<RelativeLayout android:id="@+id/RelativeLayout02"
			android:paddingTop="30dp"
			android:paddingBottom="30dp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="30dp"
			android:layout_marginTop="0dp" android:layout_marginRight="30dp">
			
			<EditText
			    android:id="@+id/login_edit_account"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_marginBottom="20dip"
			    android:layout_marginLeft="5.0dip"
			    android:layout_marginRight="5.0dip"
			    android:layout_marginTop="5.0dip"
			    android:background="@drawable/edit_text"
			    android:hint="@string/strInputAccHint"
			    android:inputType="text"
			    android:maxLength="10"
			    android:paddingLeft="45.0sp"
			    android:saveEnabled="true" />

        	<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" /> 
			<EditText android:id="@+id/login_edit_pwd"
				android:background="@drawable/edit_text" android:paddingLeft="45.0sp"
				android:saveEnabled="true" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="1.0dip"
				android:maxLength="16" android:layout_below="@+id/login_edit_account"
				android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				android:inputType="textPassword" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/TextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/TextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />
			<CheckBox android:textSize="16.0sp" android:textColor="#ffffff"
				android:id="@+id/login_cb_savepwd" android:paddingLeft="40.0px"
				 android:layout_below="@+id/TextView02"
				android:paddingRight="20dp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:checked="true" android:button="@drawable/btn_check_holo_dark"
				android:text="@string/opt_remember" 
				android:layout_alignParentRight="true" />

			<Button
			    android:id="@+id/login_btn_login"
			    android:layout_width="120dp"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/login_cb_savepwd"
			    android:layout_centerHorizontal="true"
			    android:layout_marginTop="20dp"
			    android:background="@drawable/btn_default"
			    android:text="@string/login" />

		</RelativeLayout>
	</LinearLayout>
</LinearLayout>