<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ServerIPLayoutRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/default_bg">
	
		<RelativeLayout android:id="@+id/RelativeLayout02"
			android:paddingTop="21.0dp"
			android:paddingBottom="10.0dp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="15.0px"
			android:layout_marginTop="62.0dp" android:layout_marginRight="15.0px">

			<EditText
			    android:id="@+id/ServerIP_edit_server"
			    android:background="@drawable/edit_text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_alignParentTop="true"
			    android:layout_marginBottom="5.0px"
			    android:layout_marginLeft="5.0dip"
			    android:layout_marginRight="5.0dip"
			    android:layout_marginTop="5.0dip"
			    android:hint="@string/strInputServerHint"
			    android:inputType="text"
			    android:maxLength="15"
			    android:paddingLeft="45.0sp"
			    android:saveEnabled="true" />
                
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"			android:gravity="center_vertical" android:id="@+id/TextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strServerIPInputLabel" android:layout_alignLeft="@+id/ServerIP_edit_server"
				android:layout_alignTop="@+id/ServerIP_edit_server"
				android:layout_alignBottom="@+id/ServerIP_edit_server" />

			<Button
			    android:id="@+id/ServerIP_btn_save"
			    android:layout_width="120dp"
			    android:layout_height="wrap_content"
			    android:layout_below="@+id/ServerIP_edit_server"
			    android:layout_centerHorizontal="true"
			    android:layout_marginTop="20dp"
			    android:background="@drawable/btn_default"
			    android:text="@string/SaveIP" />

		</RelativeLayout>


	</LinearLayout>